[package]
name = "test-generic-axum-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = { version = "^0.6.18", features = [ "headers", "ws", "macros" ] }
# axum-extra = "^0.7.4"
# axum-macros = "^0.3.7"

sqlx = { version = "^0.6.3", default-features= false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "^1.28.2", features = ["macros", "rt-multi-thread", "rt" ] }
uuid = { version = "^1.3.3", features = ["serde", "v4" ] }
chrono = { version = "^0.4.26", features = [ "serde" ] }
